<resources>
    <string name="app_name">TW-Movie-App</string>
    <string name="no_movies_fount">No Movies Found</string>
    <string name="user_score">user score</string>
    <string name="popular_right_now">Popular Right now</string>
    <string name="your_results">Your Results</string>
    <string name="search">Search</string>
    <string name="animation">Animation</string>
    <string name="cancel">cancel</string>
    <string name="back_to_search">Back to Search</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong!</string>
    <string name="vote_percentage_placeholder">%s %%</string>
    <string name="overview">Overview</string>
    <string name="rate_it_myself">Rate it myself  ></string>
    <string name="add_personal_rating">add personal rating</string>
    <string name="view_favs">View Favs</string>
    <string name="go_to_favourites">Go to favourites</string>
    <string name="back">Back</string>
    <string name="my_favourites">My Favourites</string>
    <string name="my_rating">My Rating</string>
    <string name="zero">0</string>
    <string name="search_for_more">Search for More</string>
    <string name="you_ve_rated_this_0">You\'ve rated this 0</string>
    <string name="click_to_reset">click to reset</string>
    <string name="no_movies_in_the_fav_list">No movies in the fav list</string>
</resources>