<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_80"
            android:background="@color/light_green"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.tw_movie_app.ui.custom_views.CustomBackButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_25"
            app:buttonIconTint="@color/brown"
            app:buttonText="@string/back"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:textColor="@color/black" />

        <TextView
            android:id="@+id/favourites_title"
            style="@style/Heading1_TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_30"
            android:text="@string/my_favourites"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/text_96"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favs_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_15"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/favourites_title"
            tools:listitem="@layout/item_favourite" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_more"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60"
            android:layout_marginHorizontal="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_50"
            android:background="@drawable/bg_round_grey"
            android:elevation="@dimen/dimen_10"
            android:text="@string/search_for_more"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/no_movie_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_100"
            android:text="@string/no_movies_in_the_fav_list"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/favs_rv" />

        <ProgressBar
            android:id="@+id/loading_view"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
