<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="@color/light_green"
            android:layout_height="@dimen/dimen_200"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/searchView"
            android:background="@drawable/bg_round_white"
            android:layout_marginTop="@dimen/dimen_40"
            android:layout_marginHorizontal="@dimen/dimen_30"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_49"
            android:paddingHorizontal="@dimen/dimen_20"
            android:hint="@string/search"
            android:fontFamily="@font/inter_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_right_now"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="@dimen/dimen_30"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            style="@style/Heading1_TextStyle"/>



        <TextView
            android:visibility="gone"
            android:id="@+id/no_data_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_movies_fount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movies_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_movie"
            android:layout_marginHorizontal="@dimen/dimen_15"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <ProgressBar
            android:id="@+id/loading_view"
            android:visibility="gone"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
