<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_green"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <com.example.tw_movie_app.ui.custom_views.CustomAppbarWithImage
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/fave_button"
            android:layout_width="@dimen/dimen_52"
            android:layout_height="@dimen/dimen_52"
            android:layout_margin="@dimen/dimen_5"
            android:background="@drawable/bg_circle"
            android:padding="@dimen/dimen_10"
            android:src="@drawable/favourite_button_selector"
            app:layout_constraintBottom_toTopOf="@id/movie_pic"
            app:layout_constraintStart_toEndOf="@id/movie_pic"
            app:layout_constraintTop_toTopOf="@id/movie_pic" />

        <ImageView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="@dimen/dimen_180"
            android:background="@drawable/bg_top_right_round_white"
            app:layout_constraintBottom_toBottomOf="@id/movie_pic"
            app:layout_constraintEnd_toEndOf="@id/movie_pic"
            app:layout_constraintStart_toStartOf="@id/movie_pic"
            app:layout_constraintTop_toTopOf="@id/movie_pic" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/movie_pic"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="@dimen/dimen_170"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dimen_25"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media_2"
            tools:src="@drawable/ic_launcher_background" />

        <com.example.tw_movie_app.ui.custom_views.CustomDoubleButton
            android:id="@+id/rate_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            app:topButtonText="@string/you_ve_rated_this_0"
            app:bottomButtonText="@string/click_to_reset"
            app:topButtonTextColor="@color/white"
            app:bottomButtonTextColor="@color/progress_green"
            app:topButtonBackground="@drawable/bg_top_round_green"
            app:bottomButtonBackground="@drawable/bg_bottom_round_black"
            app:layout_constraintTop_toBottomOf="@id/movie_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_favs"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_60"
            android:text="@string/go_to_favourites"
            android:layout_marginTop="@dimen/dimen_20"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/rate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_round_white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
